changes in meta tags

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="mask-icon" href="/icon.svg" color="#6492c7">
   <meta name="theme-color" content="#6492c7">
 
-  <title>WalterMacadini.dev</title>
+  <title>Walter Macadini</title>
 </head>
 
 <body>
